# traceme

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-package.yml  python-publish.yml
tests/: __init__.py  test_pythagoras.py  test_traceme.py
traceme/: __init__.py  traceme.py
