[tool.poetry]
name = "traceme"
version = "0.1.0"
description = "Python debug and tracer library"
authors = ["Dag Brattli <dag@brattli.net>", "Cristina Ferrer Teixidor <cris.ferrer22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.7.0"

[tool.ruff]
line-length = 120
# D100: Missing docstring in public module
# D104: Missing docstring in public package
# D105: Missing docstring in magic method
ignore = ["D100", "D101", "D102", "D103", "D105", "D107"]
target-version = "py310"
select = ["D", "E", "W",  "F", "I", "T", "RUF", "TID", "UP"]
exclude = ["tests", "docs"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
lines-after-imports = 2
known-third-party = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
